markdown/boot/4.0.0/reference/features/json.md
---
title: "JSON"
source: "reference:features/json.adoc"
---

<a id="features.json"></a>

# JSON

Spring Boot provides integration with the following JSON mapping libraries:

- Jackson 3
- Jackson 2
- Gson
- JSON-B
- Kotlin Serialization

Jackson 3 is the preferred and default library.

Support for Jackson 2 is deprecated and will be removed in a future Spring Boot 4.x release.
It is provided purely to ease the migration from Jackson 2 to Jackson 3 and should not be relied up in the longer term.

<a id="features.json.jackson"></a>

## Jackson 3

Auto-configuration for Jackson 3 is provided and Jackson is part of `spring-boot-starter-json`.
When Jackson is on the classpath a [`JsonMapper`](https://javadoc.io/doc/tools.jackson.core/jackson-databind/3.0.2/tools/jackson/databind/json/JsonMapper.html) bean is automatically configured.
Several configuration properties are provided for [customizing the configuration of the [`JsonMapper`](https://javadoc.io/doc/tools.jackson.core/jackson-databind/3.0.2/tools/jackson/databind/json/JsonMapper.html)](../../how-to/spring-mvc.md#howto.spring-mvc.customize-jackson-jsonmapper).

<a id="features.json.jackson.custom-serializers-and-deserializers"></a>

### Custom Serializers and Deserializers

If you use Jackson to serialize and deserialize JSON data, you might want to write your own [`ValueSerializer`](https://javadoc.io/doc/tools.jackson.core/jackson-databind/3.0.2/tools/jackson/databind/ValueSerializer.html) and [`ValueDeserializer`](https://javadoc.io/doc/tools.jackson.core/jackson-databind/3.0.2/tools/jackson/databind/ValueDeserializer.html) classes.
Custom serializers are usually [registered with Jackson through a module](https://github.com/FasterXML/jackson-docs/wiki/JacksonHowToCustomSerializers), but Spring Boot provides an alternative [`@JacksonComponent`](https://docs.spring.io/spring-boot/4.0.0/api/java/org/springframework/boot/jackson/JacksonComponent.html) annotation that makes it easier to directly register Spring Beans.

You can use the [`@JacksonComponent`](https://docs.spring.io/spring-boot/4.0.0/api/java/org/springframework/boot/jackson/JacksonComponent.html) annotation directly on [`ValueSerializer`](https://javadoc.io/doc/tools.jackson.core/jackson-databind/3.0.2/tools/jackson/databind/ValueSerializer.html), [`ValueDeserializer`](https://javadoc.io/doc/tools.jackson.core/jackson-databind/3.0.2/tools/jackson/databind/ValueDeserializer.html) or [`KeyDeserializer`](https://javadoc.io/doc/tools.jackson.core/jackson-databind/3.0.2/tools/jackson/databind/KeyDeserializer.html) implementations.
You can also use it on classes that contain serializers/deserializers as inner classes, as shown in the following example:

#### Java

```java
import tools.jackson.core.JsonGenerator;
import tools.jackson.core.JsonParser;
import tools.jackson.databind.DeserializationContext;
import tools.jackson.databind.JsonNode;
import tools.jackson.databind.SerializationContext;
import tools.jackson.databind.ValueDeserializer;
import tools.jackson.databind.ValueSerializer;

import org.springframework.boot.jackson.JacksonComponent;

@JacksonComponent
public class MyJacksonComponent {

	public static class Serializer extends ValueSerializer<MyObject> {

		@Override
		public void serialize(MyObject value, JsonGenerator jgen, SerializationContext context) {
			jgen.writeStartObject();
			jgen.writeStringProperty("name", value.getName());
			jgen.writeNumberProperty("age", value.getAge());
			jgen.writeEndObject();
		}

	}

	public static class Deserializer extends ValueDeserializer<MyObject> {

		@Override
		public MyObject deserialize(JsonParser jsonParser, DeserializationContext ctxt) {
			JsonNode tree = jsonParser.readValueAsTree();
			String name = tree.get("name").stringValue();
			int age = tree.get("age").intValue();
			return new MyObject(name, age);
		}

	}

}
```

#### Kotlin

```kotlin
import tools.jackson.core.JsonGenerator
import tools.jackson.core.JsonParser
import tools.jackson.databind.DeserializationContext
import tools.jackson.databind.JsonNode
import tools.jackson.databind.SerializationContext
import tools.jackson.databind.ValueDeserializer
import tools.jackson.databind.ValueSerializer

import org.springframework.boot.jackson.JacksonComponent

@JacksonComponent
class MyJacksonComponent {

	class Serializer : ValueSerializer<MyObject>() {
		override fun serialize(value: MyObject, jgen: JsonGenerator, serializers: SerializationContext) {
			jgen.writeStartObject()
			jgen.writeStringProperty("name", value.name)
			jgen.writeNumberProperty("age", value.age)
			jgen.writeEndObject()
		}
	}

	class Deserializer : ValueDeserializer<MyObject>() {
		override fun deserialize(jsonParser: JsonParser, ctxt: DeserializationContext): MyObject {
			val tree = jsonParser.readValueAsTree<JsonNode>()
			val name = tree["name"].stringValue()
			val age = tree["age"].intValue()
			return MyObject(name, age)
		}
	}

}

```

All [`@JacksonComponent`](https://docs.spring.io/spring-boot/4.0.0/api/java/org/springframework/boot/jackson/JacksonComponent.html) beans in the [`ApplicationContext`](https://docs.spring.io/spring-framework/docs/7.0.x/javadoc-api/org/springframework/context/ApplicationContext.html) are automatically registered with Jackson.
Because [`@JacksonComponent`](https://docs.spring.io/spring-boot/4.0.0/api/java/org/springframework/boot/jackson/JacksonComponent.html) is meta-annotated with [`@Component`](https://docs.spring.io/spring-framework/docs/7.0.x/javadoc-api/org/springframework/stereotype/Component.html), the usual component-scanning rules apply.

Spring Boot also provides [`ObjectValueSerializer`](https://docs.spring.io/spring-boot/4.0.0/api/java/org/springframework/boot/jackson/ObjectValueSerializer.html) and [`ObjectValueDeserializer`](https://docs.spring.io/spring-boot/4.0.0/api/java/org/springframework/boot/jackson/ObjectValueDeserializer.html) base classes that provide useful alternatives to the standard Jackson versions when serializing objects.
See [`ObjectValueSerializer`](https://docs.spring.io/spring-boot/4.0.0/api/java/org/springframework/boot/jackson/ObjectValueSerializer.html) and [`ObjectValueDeserializer`](https://docs.spring.io/spring-boot/4.0.0/api/java/org/springframework/boot/jackson/ObjectValueDeserializer.html) in the API documentation for details.

The example above can be rewritten to use [`ObjectValueSerializer`](https://docs.spring.io/spring-boot/4.0.0/api/java/org/springframework/boot/jackson/ObjectValueSerializer.html) and [`ObjectValueDeserializer`](https://docs.spring.io/spring-boot/4.0.0/api/java/org/springframework/boot/jackson/ObjectValueDeserializer.html) as follows:

#### Java

```java
import tools.jackson.core.JsonGenerator;
import tools.jackson.core.JsonParser;
import tools.jackson.databind.DeserializationContext;
import tools.jackson.databind.JsonNode;
import tools.jackson.databind.SerializationContext;

import org.springframework.boot.jackson.JacksonComponent;
import org.springframework.boot.jackson.ObjectValueDeserializer;
import org.springframework.boot.jackson.ObjectValueSerializer;

@JacksonComponent
public class MyJacksonComponent {

	public static class Serializer extends ObjectValueSerializer<MyObject> {

		@Override
		protected void serializeObject(MyObject value, JsonGenerator jgen, SerializationContext context) {
			jgen.writeStringProperty("name", value.getName());
			jgen.writeNumberProperty("age", value.getAge());
		}

	}

	public static class Deserializer extends ObjectValueDeserializer<MyObject> {

		@Override
		protected MyObject deserializeObject(JsonParser jsonParser, DeserializationContext context, JsonNode tree) {
			String name = nullSafeValue(tree.get("name"), String.class);
			int age = nullSafeValue(tree.get("age"), Integer.class);
			return new MyObject(name, age);
		}

	}

}
```

#### Kotlin

```kotlin
import tools.jackson.core.JsonGenerator
import tools.jackson.core.JsonParser
import tools.jackson.databind.DeserializationContext
import tools.jackson.databind.JsonNode
import tools.jackson.databind.SerializationContext

import org.springframework.boot.jackson.JacksonComponent;
import org.springframework.boot.jackson.ObjectValueDeserializer
import org.springframework.boot.jackson.ObjectValueSerializer

@JacksonComponent
class MyJacksonComponent {

	class Serializer : ObjectValueSerializer<MyObject>() {
		override fun serializeObject(value: MyObject, jgen: JsonGenerator, context: SerializationContext) {
			jgen.writeStringProperty("name", value.name)
			jgen.writeNumberProperty("age", value.age)
		}
	}

	class Deserializer : ObjectValueDeserializer<MyObject>() {
		override fun deserializeObject(jsonParser: JsonParser, context: DeserializationContext,
				tree: JsonNode): MyObject {
			val name = nullSafeValue(tree["name"], String::class.java) ?: throw IllegalStateException("name is null")
			val age = nullSafeValue(tree["age"], Int::class.java) ?: throw IllegalStateException("age is null")
			return MyObject(name, age)
		}
	}

}

```

<a id="features.json.jackson.mixins"></a>

### Mixins

Jackson has support for mixins that can be used to mix additional annotations into those already declared on a target class.
Spring Boot’s Jackson auto-configuration will scan your application’s packages for classes annotated with [`@JacksonMixin`](https://docs.spring.io/spring-boot/4.0.0/api/java/org/springframework/boot/jackson/JacksonMixin.html) and register them with the auto-configured [`JsonMapper`](https://javadoc.io/doc/tools.jackson.core/jackson-databind/3.0.2/tools/jackson/databind/json/JsonMapper.html).
The registration is performed by Spring Boot’s [`JacksonMixinModule`](https://docs.spring.io/spring-boot/4.0.0/api/java/org/springframework/boot/jackson/JacksonMixinModule.html).

<a id="features.json.jackson2"></a>

## Jackson 2

Deprecated auto-configuration for Jackson 2 is provided by the `spring-boot-jackson2` module.
When this module is on the classpath a [`ObjectMapper`](https://javadoc.io/doc/com.fasterxml.jackson.core/jackson-databind/2.20.1/com/fasterxml/jackson/databind/ObjectMapper.html) bean is automatically configured.
Several `spring.jackson2.*` configuration properties are provided for customizing the configuration.
To take more control, define one or more [`Jackson2ObjectMapperBuilderCustomizer`](https://docs.spring.io/spring-boot/4.0.0/api/java/org/springframework/boot/jackson2/autoconfigure/Jackson2ObjectMapperBuilderCustomizer.html) beans.

When both Jackson 3 and Jackson 2 are present, various configuration properties can be used to indicate that Jackson 2 is preferred:

- `spring.graphql.rsocket.preferred-json-mapper`
- `spring.http.codecs.preferred-json-mapper` (used by Spring WebFlux and reactive HTTP clients)
- `spring.http.converters.preferred-json-mapper` (used by Spring MVC and imperative HTTP clients)
- `spring.rsocket.preferred-mapper`
- `spring.websocket.messaging.preferred-json-mapper`

In each case, set the relevant property to `jackson2` to indicate that Jackson 2 is preferred.

<a id="features.json.gson"></a>

## Gson

Auto-configuration for Gson is provided.
When Gson is on the classpath a [`Gson`](https://javadoc.io/doc/com.google.code.gson/gson/2.13.2/com/google/gson/Gson.html) bean is automatically configured.
Several `spring.gson.*` configuration properties are provided for customizing the configuration.
To take more control, one or more [`GsonBuilderCustomizer`](https://docs.spring.io/spring-boot/4.0.0/api/java/org/springframework/boot/gson/autoconfigure/GsonBuilderCustomizer.html) beans can be used.

<a id="features.json.json-b"></a>

## JSON-B

Auto-configuration for JSON-B is provided.
When the JSON-B API and an implementation are on the classpath a [`Jsonb`](https://jakarta.ee/specifications/jsonb/3.0/apidocs/jakarta/json/bind/Jsonb.html) bean will be automatically configured.
The preferred JSON-B implementation is Eclipse Yasson for which dependency management is provided.

<a id="features.json.kotlin-serialization"></a>

## Kotlin Serialization

Auto-configuration for Kotlin Serialization is provided.
When `kotlinx-serialization-json` is on the classpath a [Json](https://kotlinlang.org/api/kotlinx.serialization/kotlinx-serialization-json/kotlinx.serialization.json/-json/) bean is automatically configured.
Several `spring.kotlinx.serialization.json.*` configuration properties are provided for customizing the configuration.
